<resources>
    <string name="app_name">My homework first</string>
    <string name="nm">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_reposts">Post reposts</string>
    <string name="description_post_views">Post views</string>
    <string name="description_post_save">Save</string>
    <string name="description_close_edit">Close edit</string>
    <string name="description_pencil">Pencil</string>
    <string name="description_preview_video">Preview</string>
    <string name="description_play">Play</string>
    <string name="description_video_title">Video title</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit Message</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_new_post"> %1$s published new post: </string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="error_message">An Error Has Occurred</string>
    <string name="refresh_records">Refresh records</string>
    <string name="remove">Remove</string>
    <string name="description_gallery">Select a photo</string>
    <string name="description_take_a_photo">Take a photo</string>
    <string name="description_photo">Photo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login </string>
    <string name="password">Password</string>
    <string name="authorization_error">Invalid username or password</string>





</resources>
